--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,5 @@ include_directories(include)
 
 # add the executable
 add_executable(${PROJECT_NAME} main.c ${SOURCES})
+target_link_libraries(${PROJECT_NAME} ncurses)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
