--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 # set the project name
 project(Terminal)
 
-set(SOURCES 
-    src/vector.c)
+set(SOURCES)
 
 include_directories(include)
 
