New header for termios and start implementing the more command.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,12 @@ project(Terminal)
 add_compile_options(-std=gnu99)
 
 set(SOURCES
+    src/Terminal_Manager.c
     src/Process_Manager.c
     src/Command_Manager.c
     src/diff.c
-    src/chmod.c)
+    src/chmod.c
+    src/more.c)
 
 include_directories(include)
 
